--- a/Hospital Management System.csproj
+++ b/Hospital Management System.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>Hospital_Management_System</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+  </ItemGroup>
+
 </Project>
